move the branch and zone from profile to user
