# controllers/branchController.js
@@ -23,6 +23,35 @@ const getBranches = async (req, res) => {
     }
 };
 
+const getBranchesByZoneId = async (req, res) => {
+
+    const zoneId = parseInt(req.params.zoneId);
+
+    try {
+        const branches = await prisma.branch.findMany({
+            where: {
+                zoneId: zoneId
+            },
+            orderBy: { name: 'asc' },
+            select: {
+                id: true,
+                name: true,
+                zone: {
+                    select: {
+                        id: true,
+                        name: true
+                    }
+                }
+            }
+        });
+        res.status(200).json({ data: branches });
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
+
 module.exports = {
-    getBranches
+    getBranches,
+    getBranchesByZoneId
 };
