# controllers/profileController.js
@@ -13,8 +13,8 @@ const addProfile = async (req, res) => {
       !namaIstri ||
       !namaAnak ||
       !tahunMasukKuttab ||
-      !bio ||
-      (!namaKuttab && (!branchId && !zoneId))
+      !bio || !namaKuttab
+      // (!namaKuttab && (!branchId && !zoneId))
     ) {
       return res
         .status(400)
@@ -22,8 +22,8 @@ const addProfile = async (req, res) => {
     }
 
     const tahunMasukKuttabInt = parseInt(tahunMasukKuttab);
-    const parsedBranchId = branchId ? parseInt(branchId) : null;
-    const parsedZoneId = zoneId ? parseInt(zoneId) : null;
+    // const parsedBranchId = branchId ? parseInt(branchId) : null;
+    // const parsedZoneId = zoneId ? parseInt(zoneId) : null;
 
     const user = await prisma.user.findUnique({
       where: { id: userId },
@@ -50,8 +50,8 @@ const addProfile = async (req, res) => {
           tahunMasukKuttab: tahunMasukKuttabInt,
           bio,
           photo: photoFilename,
-          ...(parsedBranchId !== null && { branchId: parsedBranchId }),
-          ...(parsedZoneId !== null && { zoneId: parsedZoneId })
+          // ...(parsedBranchId !== null && { branchId: parsedBranchId }),
+          // ...(parsedZoneId !== null && { zoneId: parsedZoneId })
         },
       });
       return res.json({ message: "Profile updated successfully." });
@@ -67,8 +67,8 @@ const addProfile = async (req, res) => {
           bio,
           photo: photoFilename,
           user: { connect: { id: userId } },
-          ...(parsedBranchId !== null && { branch: { connect: { id: parsedBranchId } } }),
-          ...(parsedZoneId !== null && { zone: { connect: { id: parsedZoneId } } })
+          // ...(parsedBranchId !== null && { branch: { connect: { id: parsedBranchId } } }),
+          // ...(parsedZoneId !== null && { zone: { connect: { id: parsedZoneId } } })
         },
       });
       return res.json({ message: "Profile added successfully." });
@@ -81,12 +81,14 @@ const addProfile = async (req, res) => {
 
 const editProfile = async (req, res) => {
   try {
-    const { nama, namaIstri, namaAnak, namaKuttab, tahunMasukKuttab, bio, branchId } =
+    const { nama, namaIstri, namaAnak, namaKuttab, tahunMasukKuttab, bio, 
+      // branchId 
+    } =
       req.body;
     const userId = req.userId;
 
     const tahunMasukKuttabInt = parseInt(tahunMasukKuttab);
-    const parsedBranchId = branchId ? parseInt(branchId) : null;
+    // const parsedBranchId = branchId ? parseInt(branchId) : null;
 
     const existingProfile = await prisma.profile.findUnique({
       where: { userId },
@@ -113,7 +115,7 @@ const editProfile = async (req, res) => {
         tahunMasukKuttab: tahunMasukKuttabInt,
         photo: photoFilename,
         bio,
-        ...(parsedBranchId !== null && { branchId: parsedBranchId })
+        // ...(parsedBranchId !== null && { branchId: parsedBranchId })
       },
     });
 
@@ -139,11 +141,11 @@ const getProfile = async (req, res) => {
         namaAnak: true,
         namaKuttab: true,
         tahunMasukKuttab: true,
-        branch: {
-          include: {
-            zone: true
-          }
-        },
+        // branch: {
+        //   include: {
+        //     zone: true
+        //   }
+        // },
       },
     });
 
@@ -188,15 +190,11 @@ const getUserNProfile = async (req, res) => {
     const user = await prisma.user.findUnique({
       where: { id: userId },
       include: {
-        profile: {
-          include: {
-            branch: {
-              include: {
-                zone: true
-              }
+          branch: {
+            include: {
+              zone: true
             }
           }
-        },
       },
     });
 
